# libksuid

./: .clang-tidy  .gitattributes  .gitignore  README.md  meson.build  meson.options
.github/workflows/: ci-main.yml  ci-pr.yml  lint-main.yml  lint-pr.yml
cli/: ksuid_gen.c
examples/: ksuid-gen.c
include/: ksuid.h
libksuid/: base62.c  base62.h  base62_neon.c  base62_simd.h  base62_sse2.c  byteorder.h  chacha20.c  chacha20.h  compare_neon.c  compare_scalar.c  compare_simd.h  compare_sse2.c  divisor_magic.h  encode_avx2.c  encode_batch.c  encode_batch.h  ksuid.c  ksuid.h  ksuid_version.h.in  meson.build  rand.h  rand_os.c  rand_tls.c  sequence.c  uint128.h  wipe.h
src/: base62.c  base62.h  byteorder.h  ksuid.c  rand_os.c  rand_tls.c  uint128.h
tests/: meson.build  test_base62.c  test_chacha20.c  test_cli.sh  test_compare_parity.c  test_divisor_magic.c  test_init_shared.c  test_new.c  test_next_prev.c  test_parse_format.c  test_parts.c  test_rand_os.c  test_rand_tls.c  test_sequence.c  test_simd_parity.c  test_smoke.c  test_sort.c  test_string_batch.c  test_wipe.c
tools/: derive-magic.py
